# cmake_example

./: .appveyor.yml  .gitignore  CMakeLists.txt  setup.py
PSI/: CMakeLists.txt  Makefile  cmake_install.cmake
PSI/include/: PsiSender.h  psitest.h
PSI_main/: CMakeLists.txt  cmake_install.cmake  psi_run.cpp  psi_run.h
PSI_test/: CMakeLists.txt  Makefile  run.cpp  run.h
conda.recipe/: meta.yaml
docs/: conf.py  index.rst
src/: main.cpp  param.cpp  psimock.cpp  psimock.hpp
tests/: client.py  server.py  test_basic.py
